<resources>
    <string name="app_name">Quiz JDan</string>
    <string name="design_text_question">Here is the question</string>
    <string name="text_true">True</string>
    <string name="text_false">False</string>
    <string name="text_next">Next</string>

    <string name="results">RESULTS</string>
    <string name="results_placeholder">RESULTS PLACEHOLDER</string>
    <string name="title_results">Results</string>
    <string name="title_quiz">Title</string>
    <string name="quiz_description">This is the quiz description</string>
    <string name="quiz_difficulty">difficulty</string>
    <string name="error_message">An error has occurred. Please try again.</string>
</resources>
