<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juandanielc.quizjdan.MainActivity">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingEnd="32dp"
        android:paddingStart="32dp"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/design_text_question" />

    <Button
        android:id="@+id/button_true"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_true"
        app:layout_constraintTop_toBottomOf="@+id/question_text"
        app:layout_constraintLeft_toLeftOf="@+id/result_image" />

    <Button
        android:id="@+id/button_false"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/text_false"
        app:layout_constraintTop_toTopOf="@+id/button_true"
        app:layout_constraintRight_toRightOf="@+id/result_image" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:enabled="false"
        android:textSize="20sp"
        android:text="@string/text_next"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <ImageView
        android:id="@+id/result_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_true"
        app:srcCompat="@drawable/correct"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_next" />

</android.support.constraint.ConstraintLayout>
