<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item_selector"
    android:paddingBottom="@dimen/list_item_padding_vertical"
    android:paddingLeft="@dimen/list_item_padding_horizontal"
    android:paddingRight="@dimen/list_item_padding_horizontal"
    android:paddingTop="@dimen/list_item_padding_vertical"
    android:minHeight="?android:attr/listPreferredItemHeight">

    <TextView
        android:id="@+id/tv_quiz_title"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="2dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title_quiz" />

    <TextView
        android:id="@+id/tv_quiz_description"
        android:layout_width="293dp"
        android:layout_height="19dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:elevation="1dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        app:layout_constraintLeft_toLeftOf="@+id/tv_quiz_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_quiz_title"
        tools:text="@string/quiz_description"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="2dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_quiz_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        tools:text="@string/quiz_difficulty"
        android:layout_marginRight="9dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />
</android.support.constraint.ConstraintLayout>